# wheelchair_arm

./: README.md
arm_motionplanning/: CMakeLists.txt  package.xml
arm_motionplanning/include/arm_motionplanning/: jaco_consts.hpp  jaco_traj.hpp  jaco_utils.hpp
arm_motionplanning/jaco_arm_description/: base.xml  wheelchair.urdf  wheelchair.xml
arm_motionplanning/src/: jaco_costs.cpp  jaco_debug.cpp  jaco_perception.cpp  jaco_traj.cpp  jaco_utils.cpp
arm_motionplanning/test/: debug_traj.cpp  jaco_door.cpp  jaco_grab.cpp
camera_calibration/: CMakeLists.txt  package.xml
camera_calibration/launch/: camera_calibration.launch
camera_calibration/src/: camera_calibration.cpp
jaco-ros/jaco_demo/nodes/jaco_demo/: joint_angle_workout.py  joint_trajectory_workout.py
jaco-ros/jaco_driver/: CMakeLists.txt
jaco-ros/jaco_driver/include/jaco_driver/: jaco_trajectory_angles_action.h
jaco-ros/jaco_driver/src/: jaco_comm.cpp  jaco_trajectory_angles_action.cpp  jaco_types.cpp
jaco-ros/jaco_driver/src/nodes/: jaco_arm_driver.cpp
jaco-ros/jaco_driver/test/: pid_param_test.m
jaco-ros/jaco_model/launch/: display_jaco.launch
jaco-ros/jaco_mp_io/: CMakeLists.txt  package.xml
jaco-ros/jaco_mp_io/include/jaco_mp_io/: JointStateReceiver.h  PointCloudReceiver.h  jaco_mp_io.h
jaco-ros/jaco_mp_io/launch/: jaco_mp_io.launch
jaco-ros/jaco_mp_io/msg/: ArmMotionPlanningCommand.msg  GrabCommand.msg  LoadObject.msg  SetProblemParameters.msg
jaco-ros/jaco_mp_io/src/: JointStateReceiver.cpp  PointCloudReceiver.cpp  jaco_mp_io.cpp  jaco_mp_io_node.cpp
jaco-ros/jaco_mp_io/test/: commandsender.cpp  grabmultipleobjects.cpp
trajopt/: CMakeLists.txt  package.xml
trajopt/data/: box.xml  cup.xml  cylinder.xml  debris.xml  door.xml  sugar_box.xml
trajopt/ext/: CMakeLists.txt
trajopt/src/: CMakeLists.txt
trajopt/src/cloudproc/: CMakeLists.txt  cloudproc.cpp  cloudprocpy.cpp  hacd_interface.cpp  mesh_simplification.cpp  vtkQuadricDecimation2.cxx
trajopt/src/humanoids/: CMakeLists.txt  humanoids.cpp  humanoids.hpp
trajopt/src/osgviewer/: CMakeLists.txt  osgviewer.cpp  osgviewer.hpp  robot_ui.hpp
trajopt/src/pclVisualizer/: cloud_viewer.cpp
trajopt/src/sandbox/: CMakeLists.txt
trajopt/src/sco/: CMakeLists.txt  gurobi_interface.cpp
trajopt/src/sco/test/: CMakeLists.txt
trajopt/src/sensorsim/: CMakeLists.txt
trajopt/src/trajopt/: CMakeLists.txt  bullet_collision_checker.cpp  collision_checker.hpp  collision_terms.hpp  common.hpp  configuration_space.hpp  json_marshal.hpp  kinematic_terms.cpp  kinematic_terms.hpp  plot_callback.hpp  problem_description.cpp  problem_description.hpp  rave_utils.hpp  traj_plotter.cpp  traj_plotter.hpp  trajectory_costs.hpp  typedefs.hpp  utils.hpp
trajopt/src/trajopt/test/: CMakeLists.txt
trajopt/src/utils/: CMakeLists.txt  basic_array.hpp  clock.hpp  config.hpp  eigen_conversions.hpp  eigen_slicing.hpp  interpolation.hpp  logging.cpp  logging.hpp  math.hpp  stl_to_string.hpp  vector_ops.hpp
